# rpy-blog

./: .gitignore  README.md
DiabetesRiskAnalysis/: DiabetesRiskAnalysis.ipynb  DiabetesRiskAnalysis.qmd  README.md
MLBHoFPart1/: MLBHoFDataGathering.qmd
MLBHoFPart2/: MLBHoFPart2.html  MLBHoFPart2.qmd  MLBHoFPart2.quarto_ipynb  README.md  install_packages.R  pyproject.toml
MLBHoFPart2/MLBHoFPart2_files/execute-results/: html.json
ScoobyDoo/: README.md  ruh-roh-raggy.qmd
Visualizations with R and Python/: pyproject.toml  r_python_visualizations.qmd
_drafts/Blog Post 1/: BlogPost1.qmd
_drafts/TidyTuesday20250304/: tidy-tuesday-blog1.qmd
_drafts/TidyTuesday20250304/tidy-tuesday-blog1_files/execute-results/: html.json
diabetes-risk-analysis/: index.qmd  references.bib
mlb-hof-part-1/: README.md  index.qmd
mlb-hof-part-2/: .gitignore  _quarto.yml  index.qmd  pyproject.toml
r-python-visualizations/: README.md  index.qmd  main.py  pyproject.toml
scooby-doo-analytics/: index.qmd
